--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lucide-react": "^0.561.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.11.0",
     "recharts": "^2.12.7",
     "tailwind-merge": "^3.4.0"
   },
